Fix comments not displaying correctly on IE8

--- a/content/themes/datascience/main.css
+++ b/content/themes/datascience/main.css
@@ -1,3 +1,8 @@
+/* HTML5 FIXES FOR IE8 */
+header, article, footer {
+    display: block;
+}
+
 /* DITJES EN DATJES 
         /*lettertype en lettergrote */
 body, html
